fixed overflow for hero, break css into parts

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,11 +2,11 @@
 @import "variables";
 @import "config";
 @import "include-media";
+
 @import "header.scss";
 @import "features.scss";
 @import "article.scss";
 @import "footer.scss";
-
 
 // Globals
 body {
@@ -18,8 +18,9 @@ body {
 .main {
   min-width: 320px;
   position: relative;
-  overflow: auto;
+  overflow: clip;
 }
+
 a,
 a:visited {
   color: $transparent-white;
@@ -67,167 +68,6 @@ a:visited {
 
 /* 
 *
-              Header 
-*
-*/
-
-// Nav
-.nav {
-  height: 3.7em;
-  padding: 0 7.5%;
-  display: flex;
-  align-items: center;
-  position: relative;
-  &__logo {
-    margin-right: auto;
-  }
-  &__links {
-    width: 30rem;
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    text-decoration: none;
-  }
-  &__menu {
-    width: 1.5em;
-    height: 0.9em;
-    margin-left: auto;
-  }
-}
-
-// nav media query
-@include media("<desktop") {
-  .nav__links {
-    color: $primary-dark-blue;
-    display: none;
-  }
-}
-
-// Hero
-.hero {
-  text-align: center;
-  padding-bottom: 2.5rem;
-  &__image {
-    height: 45vh;
-    width: 100%;
-    background: url(../images/image-mockups.png) no-repeat,
-      url(../images/bg-intro-mobile.svg) no-repeat;
-    background-position: right 50% bottom -7%, left center;
-    background-repeat: no-repeat, repeat;
-    background-size: 87%, cover;
-  }
-  &__title {
-    font-weight: weight(light);
-    font-size: 2.9em;
-    color: $primary-dark-blue;
-  }
-  &__subtitle {
-    line-height: 1.7;
-    padding: 0 7.5%;
-  }
-  &__cta {
-    margin: 2em;
-  }
-}
-
-/* 
-*
-              Features 
-*
-*/
-
-.features {
-  width: 100%;
-  padding: 2.7em 0;
-  background: $neutral-light-grayish-blue;
-  text-align: center;
-  border: solid yellow 1px;
-  &__subtitle {
-    margin-bottom: 2.7em;
-  }
-}
-
-/* 
-*
-              Articles 
-*
-*/
-
-.articles {
-  @extend .features;
-  background: white;
-  text-align: left;
-  border: solid red 1px;
-  &__title {
-    text-align: center;
-  }
-}
-
-.card {
-  width: 85%;
-  border-radius: 15px;
-  border: 1px solid $neutral-light-grayish-blue;
-  margin: 0 auto 2.5em auto;
-  &__image {
-    width: 100%;
-    // height: 195px;
-    border-radius: 10px 10px 0 0;
-  }
-  &__body {
-    // text-align: ;
-    padding: 1em;
-  }
-  &__text-title {
-    font-weight: weight(light);
-    color: $primary-dark-blue;
-    font-size: 1.2em;
-    margin: 0.2em auto;
-  }
-  &__text-subtitle {
-    font-size: $font-normal;
-  }
-}
-
-/* 
-*
-              Footer 
-*
-*/
-
-.footer {
-  padding: 3em 0;
-  background: $primary-dark-blue;
-  color: $transparent-white;
-  text-align: center;
-  &__logo {
-    margin-bottom: 2em;
-  }
-  &__socials {
-    width: 50%;
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    justify-content: space-around;
-    font-size: 1.8em;
-
-    list-style-type: none;
-  }
-  &__nav {
-    line-height: 2.5;
-    display: grid;
-    grid-template-columns: 1;
-  }
-  &__cta {
-    margin: 2em 0;
-  }
-  &__copyright {
-    margin: 0;
-    color: $neutral-grayish-blue;
-  }
-}
-
-/* 
-*
               Media Queries 
 *
 */
@@ -238,12 +78,12 @@ a:visited {
 }
 
 @media (min-width: 700px) {
-.main {
-  border: solid rebeccapurple 1px;
-  overflow: auto;
-}
+  .main {
+    border: solid rebeccapurple 1px;
+    overflow: auto;
+  }
 
-/* 
+  /* 
 *
               Navbar 
 *
@@ -259,7 +99,6 @@ a:visited {
       display: none;
     }
   }
-  
 
   /* 
 *
@@ -302,6 +141,3 @@ a:visited {
     justify-content: space-around;
   }
 }
-
-
-
